--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,17 @@
         android:textStyle="bold"
 
         />
+		<TextView
+        android:id="@+id/Hello World"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Login"
+        android:textColor="#000000"
+        android:textSize="32dp"
+        android:textStyle="bold"
+
+        />
 
     <EditText
         android:id="@+id/etUserName"
